--- a/views/wilsonquarterlyhomepage.erb
+++ b/views/wilsonquarterlyhomepage.erb
@@ -42,7 +42,7 @@
           Now they are recognizing that social
           factors are among the causes, and
           must be part of the cure.</h4>
-          <h5><a href="#">READ FULL ARTICLE >></a></h5>
+          <h5><a href="/article">READ FULL ARTICLE >></a></h5>
           <h5><a href="#">SEE THE ENTIRE ISSUE >></a></h5>
         </div>
         <div class="six column">
