--- a/views/wilsonquarterlyhomepage.erb
+++ b/views/wilsonquarterlyhomepage.erb
@@ -49,35 +49,62 @@
           <img src="http://placehold.it/600x600&text=FeaturedImage" />
         </div>
       </div>
+      <!-- end main feature -->
       <!-- Rotator -->
-      <div class="panel">
-        <div class="row">
-          <div class="six column">
-            <img src="http://placehold.it/600x600&text=FeaturedImage" />
-          </div>
-          <div class="six column">
+      <div id="featured">
+        
+
+      <!-- start c1 -->
+        <div class="panel">
+          <div class="row">
+            <div class="six column">
+              <img src="http://www.wilsonquarterly.com/admin/cffm/custom/convention2.jpg" />
+            </div>
+            <div class="six column">
+    				<div class="row">
+    					<div class="left">
+    						Summer 2012
+    					</div>
+    					<div class="left">
+    						<h2>The Campaign Triumphant</h2>
+    					</div>
+    				</div>
+    				<div class="row">
+    					<h4>“The people have nominated you without any pledges or engagements of any sort . . . and they want you to do nothing at present but allow yourself to be elected,” the poet and newspaper editor William Cullen Bryant told Abraham Lincoln in 1860. “Make no speeches, write no letters as a candidate, enter into no pledges, make no promises.”
+              </h4>
+    						<h5><a href="#">READ FULL ARTICLE >></a></h5>
+    						<h5><a href="#">SEE THE ENTIRE ISSUE >></a></h5>
+    				</div>
+  			  </div> 
+  			</div>  
+  		  </div>	<!-- end c1 -->
+
+      <!-- start c2 -->
+        <div class="panel">
+          <div class="row">
+            <div class="six column">
+              <img src="http://www.wilsonquarterly.com/admin/cffm/custom/childbeyondgate1.jpg" />
+            </div>
+            <div class="six column">
             <div class="row">
               <div class="left">
                 Summer 2012
               </div>
               <div class="left">
-                <h2>Beyond the brain</h2>
+                <h2>The Withering of the Affluent Society</h2>
               </div>
             </div>
             <div class="row">
-              <h4>In the 1990s, scientists declared that
-              schizophrenia and other psychiatric
-              illnesses were pure brain disorders
-              that would eventually yield to drugs.
-              Now they are recognizing that social
-              factors are among the causes, and
-              must be part of the cure.</h4>
-              <h5><a href="#">READ FULL ARTICLE >></a></h5>
-              <h5><a href="#">SEE THE ENTIRE ISSUE >></a></h5>
+              <h4>The future of affluence is not what it used to be. Americans have long believed—it’s part of our national character—that our economic well-being will constantly increase. We see ourselves as a striving, inventive, and pragmatic people destined for higher living standards.</h4>
+                <h5><a href="#">READ FULL ARTICLE >></a></h5>
+                <h5><a href="#">SEE THE ENTIRE ISSUE >></a></h5>
             </div>
-          </div>
-        </div>
-      </div>
+          </div> 
+        </div>  
+        </div>  <!-- end c2 -->
+  
+      </div> <!-- end carousel -->        
+      
     </div> <!--- end right top -->
   </div>  <!-- end top section -->
   <!-- End Header and Nav -->
