--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,6 +15,9 @@
 
 	<!-- Included CSS Files -->
 	<link rel="stylesheet" href="stylesheets/app.css">
+	<link rel="stylesheet" href="stylesheets/flexslider.css">
+	
+	
 
 	<script src="javascripts/foundation/modernizr.foundation.js"></script>
 
@@ -22,6 +25,7 @@
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
+	
 
 </head>
 <body>
@@ -43,8 +47,14 @@
 	<script src="javascripts/foundation/jquery.foundation.tabs.js"></script>
 	<script src="javascripts/foundation/jquery.foundation.tooltips.js"></script>
 	<script src="javascripts/foundation/jquery.placeholder.js"></script>
-
+	<script src="javascripts/jquery.flexslider-min.js"></script>
+	
   <!-- Application Javascript, safe to override -->
-  <script src="javascripts/foundation/app.js"></script>
+  	<script src="javascripts/foundation/app.js"></script>
+	<script type="text/javascript">
+   		$(window).load(function() {
+       		$('#featured').orbit({ fluid: '16x9', directionalNav: false, animation: 'fade', animationSpeed: 500, bullets: true });
+   		});
+	</script>
 </body>
 </html>
