--- a/views/layout.erb
+++ b/views/layout.erb
@@ -53,7 +53,7 @@
   	<script src="javascripts/foundation/app.js"></script>
 	<script type="text/javascript">
    		$(window).load(function() {
-       		$('#featured').orbit({ fluid: '16x9', advanceSpeed: 7000, directionalNav: false, animation: 'fade', animationSpeed: 2100, bullets: true });
+       		$('#featured').orbit({ fluid: '16x9', timer: true, advanceSpeed: 8000, directionalNav: false, animation: 'fade', animationSpeed: 2100, bullets: true });
    		});
 	</script>
 </body>
