added partials & finished article detail page

--- a/views/wilsonquarterlyhomepage.erb
+++ b/views/wilsonquarterlyhomepage.erb
@@ -3,15 +3,7 @@
   
   <div class="row">
     <div class="three columns">
-      <h1><img src="http://placehold.it/300x400&text=WilsonQuarterly" /></h1>
-      <ul class="nav-bar vertical">
-        <li><a href="#">Current Issue</a></li>
-        <li><a href="#">In Essence</a></li>
-        <li><a href="#">Book Reviews</a></li>
-        <li><a href="#">Previous Issues</a></li>
-        <li><a href="#">Subscribe</a></li>
-        <li><a href="#">About</a></li>
-      </ul> 
+      <%= erb :menu %>
     </div>
     <div class="nine columns">
       <div class="row">
@@ -51,7 +43,7 @@
       </div>
       <!-- end main feature -->
       <!-- Rotator -->
-      <div id="featured">
+      <div id="featured" style="margin-top: 15px;">
         
 
       <!-- start c1 -->
@@ -124,29 +116,10 @@
   <!-- End Information Panels -->
   
  <!-- Optional Ad Space -->
-  <div class="row">
+  <div class="row" style="margin-top: 15px;">
     <div class="six column"><img src="http://placehold.it/600x600&text=OptionalAdSpace" /></div>
     <div class="six column"><img src="http://placehold.it/600x600&text=OptionalAdSpace" /></div>
   </div>
   <!-- End Optional Ad Space -->
 
-  <!-- Footer -->
   
-  <footer class="row">
-    <div class="twelve columns">
-      <hr />
-      <div class="row">
-        <div class="six columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
-        </div>
-        <div class="six columns">
-          <ul class="link-list right">
-            <li><a href="#">Section 1</a></li>
-            <li><a href="#">Section 2</a></li>
-            <li><a href="#">Section 3</a></li>
-            <li><a href="#">Section 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div> 
-  </footer>
