--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,7 +15,7 @@
 
 	<!-- Included CSS Files -->
 	<link rel="stylesheet" href="stylesheets/app.css">
-	<link rel="stylesheet" href="stylesheets/flexslider.css">
+	<link rel="stylesheet" href="stylesheets/style.css">
 	
 	
 
@@ -33,6 +33,28 @@
 	
 			<%= yield %>
 		
+	<!-- Footer -->
+  
+  <footer class="row">
+    <div class="twelve columns">
+      <hr />
+      <div class="row">
+        <div class="six columns">
+          <p>&copy; Copyright 2012, The Woodrow Wilson International Center for Scholars. All rights reserved.</p>
+        </div>
+        <div class="six columns">
+          <ul class="link-list right">
+            <li><a href="#">Current Issue</a></li>
+					  <li><a href="#">In Essence</a></li>
+					  <li><a href="#">Book Reviews</a></li>
+					  <li><a href="#">Previous Issues</a></li>
+					  <li><a href="#">Subscribe</a></li>
+					  <li><a href="#">About</a></li>
+          </ul>
+        </div>
+      </div>
+    </div> 
+  </footer>	
 
 	<!-- Included JS Files (Uncompressed) -->
 	<script src="javascripts/foundation/jquery.js"></script>
@@ -47,7 +69,7 @@
 	<script src="javascripts/foundation/jquery.foundation.tabs.js"></script>
 	<script src="javascripts/foundation/jquery.foundation.tooltips.js"></script>
 	<script src="javascripts/foundation/jquery.placeholder.js"></script>
-	<script src="javascripts/jquery.flexslider-min.js"></script>
+	
 	
   <!-- Application Javascript, safe to override -->
   	<script src="javascripts/foundation/app.js"></script>
